@@ -1,5 +1,7 @@
 # Release 2.6
  * separation between plugins and GUIs
+ * the daemon supports jsonrpc commands
+ * new command: 'notify <address> <url>'
 
 # Release 2.5.4
  * increase MIN_RELAY_TX_FEE to avoid dust transactions
